Went ham on the styling. Got my project to look like the desired one

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>NFT-Preview-FrontendMentor</title>
 </head>
 <body>
-    <div class="main-container">
         <div class="container">
             <div class="img">
                 <img src="./images/image-equilibrium.jpg" alt="A nice cool looking image">
@@ -29,13 +28,12 @@
             <hr>
             <div class="footer">
                 <div class="f-img">
-                    <img src="./images/image-avatar.jpg" alt="An avatar image">
+                    <img src="./images/image-avatar.png" alt="An avatar image">
                 </div>
                 <div class="f-text">
                     <h4>Creation of Jules Wyvern</h4>
                 </div>
             </div>
         </div>
-    </div>
 </body>
 </html>
